feat/docs: feedback
