# src/api-documentation.json
@@ -1,11 +1,11 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "Aion API",
-    "description": "Aion",
+    "title": "YourFinance",
+    "description": "YourFinance",
     "contact": {
       "name": "Aion corps",
-      "email": "aioncorps@gmail.com"
+      "email": "yourfinance@gmail.com"
     },
     "version": "1.0.0"
   },
@@ -41,6 +41,14 @@
     {
       "name": "GoalBox",
       "description": "Goal's Box of User"
+    },
+    {
+      "name": "FeedbackCategory",
+      "description": "Methods of categories of feedback's"
+    },
+    {
+      "name": "Feedback",
+      "description": "Feedback"
     }
   ],
   "paths": {
@@ -1065,6 +1073,128 @@
           "204": {}
         }
       }
+    },
+    "api/feedbackcategory": {
+      "post": {
+        "tags": ["FeedbackCategory"],
+        "summary": "Create an new category for feedback",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "string"
+                    },
+                    "name": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "get": {
+        "tags": ["FeedbackCategory"],
+        "summary": "Get every category of feedback",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "items": {
+                    "$ref": "#/definitions/FeedbackCategory"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "api/feedbackcategory/:id": {
+      "get": {
+        "tags": ["FeedbackCategory"],
+        "summary": "Get unique category of feedback",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/definitions/FeedbackCategory"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Não foi possível achar está categoria!"
+          }
+        }
+      }
+    },
+    "api/feedback": {
+      "post": {
+        "tags": ["Feedback"],
+        "summary": "Create an new feedback",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/Feedback"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/definitions/Feedback"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -1250,6 +1380,34 @@
         "createdAt": {
           "type": "string",
           "format": "date"
+        }
+      }
+    },
+    "FeedbackCategory": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string"
+        },
+        "name": {
+          "type": "string"
+        }
+      }
+    },
+    "Feedback": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string"
+        },
+        "title": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "feedbackCategoryId": {
+          "type": "string"
         }
       }
     }
